--- a/src/css/colors.module.css
+++ b/src/css/colors.module.css
@@ -1,3 +1,4 @@
+/* import "./css/colors.module.css"; */
 .primary {
   background-color: var(--md-sys-color-primary);
 }
@@ -10,8 +11,8 @@
 .on-primary-text {
   color: var(--md-sys-color-on-primary);
 }
-.primary-container {
-  background-color: var(--md-sys-color-primary-container);
+  .primary-container {
+    background-color: var(--md-sys-color-primary-container);
 }
 .primary-container-text {
   color: var(--md-sys-color-primary-container);
