--- a/src/css/colors.module.css
+++ b/src/css/colors.module.css
@@ -1,4 +1,4 @@
-/* import "./css/colors.module.css"; */
+/* import "../../css/colors.module.css"; */
 .primary {
   background-color: var(--md-sys-color-primary);
 }
