--- a/src/App.css
+++ b/src/App.css
@@ -43,18 +43,17 @@
   src: local("InterVariableFont"),
     url("./font/InterVariableFont.ttf") format("truetype");
 }
-<<<<<<< Updated upstream
 h2.catalogoTitle{
   position: relative;
   top: 20px;
   font-family: "Inter";
-  background-color: rgb(169, 231, 169);
-  border-radius: 100% 100% 0 0;
-  width: 90%;
+  background-color: rgb(163, 170, 255);
+  border-radius: 0 0 0 0;
+  width: 95%;
   display: inline-block;
-=======
-
-.linear-gradient {
+  box-shadow: #000000 1px;;
+  
+}
+.linear-gradient{
   background-image: linear-gradient(to bottom, #817d79, #a97bd1);
->>>>>>> Stashed changes
 }
