--- a/src/components/navigationBar/navigationBar.css
+++ b/src/components/navigationBar/navigationBar.css
@@ -1,3 +1,4 @@
+
 div.inicio{
     /* width: 350 */
     width: 400px; 
@@ -41,9 +42,14 @@ span.navDer2{
     display: inline-block;
     vertical-align: middle;
     padding: 0.3cm;
+    font-weight: bold;
+    font-family: Helvetica;
     
 
 }
-a{
+
+Link{
+    color: rgb(151, 18, 67);
     font-weight: bold;
+    font-family: Helvetica;
 }
