--- a/src/components/myLocalStorage/myLocalStorage.css
+++ b/src/components/myLocalStorage/myLocalStorage.css
@@ -7,3 +7,10 @@ h4{
     position: absolute;
     font-size: 0%;
 }
+h3{
+    background-color: #ffab91;
+    color: #000000 ;
+    font-family: Helvetica;
+    font-style: italic;
+    background-size: 30px;
+}
