--- a/src/css/colors.module.css
+++ b/src/css/colors.module.css
@@ -1,3 +1,11 @@
+@use "@material/theme" with (
+  $primary: #fcb8ab,
+  $secondary: #feeae6,
+  $on-primary: #442b2d,
+  $on-secondary: #442b2d,
+);
+@use "@material/button/mdc-button";
+
 .primary {
   background-color: var(--md-sys-color-primary);
 }
