--- a/src/components/Carrusel/Carrusel.css
+++ b/src/components/Carrusel/Carrusel.css
@@ -15,7 +15,7 @@ div.p{
     color: black;
 }
 div.h3{
-    background-color: brown;
+    background-color: #f9683a;
     color: black ;
     font-family: fantasy;
 }
