--- a/src/paginas/inicio.css
+++ b/src/paginas/inicio.css
@@ -52,7 +52,7 @@ h2.catalogoTitle{
   width: 95%;
   display: inline-block;
  }
-.linear-gradient {
-  background-image: linear-gradient(to bottom, #817d79, #a97bd1);
+div.pag{
+  background-image: linear-gradient(to bottom, #f9683a, #c97b63);
 }
 
