Css Changes about somethin at all

--- a/src/components/ubication/ubication.css
+++ b/src/components/ubication/ubication.css
@@ -11,6 +11,7 @@ div.FatherUbication{
 h2.tituloUbication{
     background-color: #870000;
     font-size: x-large;
+    position: relative;
     font-family: "Helvetica";
     color: #ffffff;
     max-width: 100%;
