--- a/src/components/ubication/ubication.css
+++ b/src/components/ubication/ubication.css
@@ -5,9 +5,9 @@ div.FatherUbication{
     width: 95%;
     height: 150%;
     align-items: center;
-    box-shadow: 50px 50 50 50; 
-    
+    box-shadow: 50px 50px 50px 50px; 
 }
+
 h2.tituloUbication{
     background-color: #870000;
     font-size: x-large;
