--- a/src/components/navigationBar/navigationBar.css
+++ b/src/components/navigationBar/navigationBar.css
@@ -1,6 +1,6 @@
-div.inicio{
+div.inicio {
     /* width: 350 */
-    width: 500px; 
+    width: 500px;
     height: 120px;
     overflow: hidden;
     margin-top: -48px;
@@ -8,46 +8,37 @@ div.inicio{
     position: relative;
     max-height: 10%;
     justify-content: center;
-    
 }
-h2.inicio:hover{
-    background-color:rgba(0,0,0,0.05);
+h2.inicio:hover {
+    background-color: rgba(0, 0, 0, 0.05);
     border-radius: 5%;
-    transition: all .2s ease;
-
-    
+    transition: all 0.2s ease;
 }
-div.separador{
+div.separador {
     display: inline-block;
     border-right: 1px solid white;
     height: 15px;
 }
-div.navDer2{
+div.navDer2 {
     font-weight: bold;
     color: black;
-
-    
-
 }
-.navDer2:hover{
+.navDer2:hover {
     height: 100%;
-    background-color:rgba(0,0,0,0.05);
+    background-color: rgba(0, 0, 0, 0.05);
     /* background-image: linear-gradient(#ff5f20, rgba(255, 176, 111, 0.1)); */
     /* background-position: 10px; */
     box-shadow: 0px 0px 2px gray;
-    color:#ffffff;
+    color: #ffffff;
     border-bottom: 2px solid black;
     border-radius: 6% 35% 6% 35%;
-    transition: all .2s ease;
-    text-shadow: 0px 0px 6px gray;
+    transition: all 0.2s ease;
 }
-a:hover{
-   
-
+a:hover {
 }
 
-img.iconoNavbar{
-    position:absolute;
+img.iconoNavbar {
+    position: absolute;
     left: -45%;
     right: -35%;
     top: -25%;
@@ -57,22 +48,16 @@ img.iconoNavbar{
     min-width: 10%;
     max-width: 90%;
     height: 500px;
-    
 }
 
-.navDer2{
-
-}
-
-.links{
+.links {
     display: inline;
 }
 
-div.active{
+div.active {
     /* min-height: 185px; */
-    
 }
-.navDer2{
+.navDer2 {
     display: inline-block;
     vertical-align: middle;
     align-items: center;
@@ -80,14 +65,10 @@ div.active{
     font-weight: bold;
     font-family: Helvetica;
     border-width: 0px;
-    background-color:#9cbbc1;
+    background-color: #9cbbc1;
     height: 100%;
-
-    
-
 }
 
 body {
     background: #f2f2f2;
-  }
-  
+}
