--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,10 +1,11 @@
 .footer {
     display: flex;
     flex-direction: column;
+    bottom: 0;
     margin-bottom: 0px;
     font-weight: bold;
     font-family: Helvetica;
-    background-color:rgb(156, 171, 186) ;
+
   }
   
   .footer-social-media {
@@ -66,9 +67,12 @@
   .footer-seperator {
     flex-grow: 1;
     border: none;
-    height: 1px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    height: 3px;
     background-color: black;
-    width: 100%;
+    width: 95%;
   }
   
   .footer-name {
