--- a/src/components/myLocalStorage/myLocalStorage.css
+++ b/src/components/myLocalStorage/myLocalStorage.css
@@ -16,3 +16,41 @@ h3 {
 .container2 {
     margin-top: 10px;
 }
+/* .tituloTabla {
+    padding: 10px;
+    color: rgb(0, 0, 0);
+    background-color: rgb(103, 177, 103);
+    width: 80%;
+    justify-content: center;
+    display: inline-block;
+}
+thead {
+    background-color: rgb(65, 118, 163);
+}
+tbody {
+    background-color: aliceblue;
+} */
+.TablaProductosActualizados{
+    background-color: #c7c7c7;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+h2.tituloTabla{
+    position: absolute;
+    padding: 1%;
+    font-size: x-large;
+    margin-bottom: -5px;
+    /* margin-left: -12%; */
+    left: 10%;
+}
+
+thead{
+    background-color: #afd7e0;
+    color: black;
+}
+tbody{
+    background-color: white;
+}
+table{
+    margin-top: 50px;
+    margin-left: -12%;
+}
