--- a/src/components/navigationBar/navigationBar.css
+++ b/src/components/navigationBar/navigationBar.css
@@ -10,7 +10,7 @@ div.inicio {
     justify-content: center;
 }
 h2.inicio:hover {
-    background-color: rgba(0, 0, 0, 0.05);
+    
     border-radius: 5%;
     transition: all 0.2s ease;
 }
@@ -24,7 +24,7 @@ div.navDer2 {
     color: black;
 }
 .navDer2:hover {
-    height: 100%;
+    /* height: 100%; */
     background-color: rgba(0, 0, 0, 0.05);
     /* background-image: linear-gradient(#ff5f20, rgba(255, 176, 111, 0.1)); */
     /* background-position: 10px; */
@@ -34,7 +34,11 @@ div.navDer2 {
     border-radius: 6% 35% 6% 35%;
     transition: all 0.2s ease;
 }
-a:hover {
+p {
+    color: white;
+}
+div.navDer2:hover{
+    color: white;
 }
 
 img.iconoNavbar {
